# KroovePlayer

./: .gitignore  AUDIO_STREAM_ANALYSIS.md  CPP_DETAILED_REVIEW.md  IMPROVEMENT_ROADMAP.md  MODULES_REVIEW.md  run.sh  start.bat
kroove/: vite.config.ts
kroove/docs/: custom-render-mode.md
kroove/src/: App.vue
kroove/src/assets/icons/: IconChevronDown.vue  IconClose.vue  IconEdit.vue  IconRepeatSync.vue  IconWarning.vue
kroove/src/component/: EmptyState.vue  GrooveRadio.vue  GrooveSelect.vue  GrooveSlider.vue  GrooveSwitch.vue  GrooveVirtualList.vue  LibraryUpdateToast.vue  LocationDialog.vue  SettingsView.vue  SidebarItem.vue  SidebarSearch.vue  SongListItem.vue  TrackEditDialog.vue
kroove/src/composables/: lyricSprites.ts  useCanvasEngine.ts
kroove/src/composables/render/: index.ts  types.ts
kroove/src/composables/render/default/: index.ts  manifest.json
kroove/src/composables/render/neon-pulse/: index.ts  manifest.json
kroove/src/composables/render/rainbow-bounce/: index.ts  manifest.json
kroove/src/composables/render/typewriter/: candidates.ts  index.ts  manifest.json
kroove/src/frame/: FullScreenPlayer.vue  MainContent.vue  PlayerBar.vue  Sidebar.vue
kroove/src/stores/: player.ts
modules-master/: .gitignore  package.json
modules-master/app/: CMakeLists.txt  addon.cpp  app.js  package.json  test_visualizer.js
modules-master/app/docs/: debug.md  mpv_callback_deadlock_fix.md  progress-bar.md
modules-master/app/units/: configManager.js  coreManager.js  dbManager.js  libraryManager.js  mediaControlManager.js  networkManager.js  playlistManager.js
modules-master/app/wrappers/engine/: EngineWrapper.cpp  EngineWrapper.h  engine.cpp  engine.h  engine_types.h
modules-master/app/wrappers/engine/lyricer/: CMakeLists.txt  LrcParser.cpp  LrcParser.h  LyricQuery.cpp  LyricQuery.h  LyricTypes.h
modules-master/app/wrappers/engine/player/: CMakeLists.txt  PlayerCore.cpp  PlayerCore.h  PlayerTypes.h
modules-master/app/wrappers/engine/visualizer/: Visualizer.cpp  Visualizer.h
