cmake_minimum_required(VERSION 3.10)
project(ag_backend)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(MSVC)
    add_compile_options(/utf-8)
endif()

if(WIN32)
    # Windows 环境直接挂载本目录下的 mpv
    set(MPV_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/mpv/include")
    set(MPV_LIBRARIES "${CMAKE_CURRENT_SOURCE_DIR}/mpv/libmpv.dll.a")
else()
    # 兼容原 Linux 环境
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(MPV REQUIRED mpv)
endif()

include_directories(${CMAKE_JS_INC} ${MPV_INCLUDE_DIRS})

execute_process(COMMAND node -p "require('node-addon-api').include"
        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
        OUTPUT_VARIABLE NODE_ADDON_API_DIR
        )
string(REPLACE "\n" "" NODE_ADDON_API_DIR ${NODE_ADDON_API_DIR})
string(REPLACE "\"" "" NODE_ADDON_API_DIR ${NODE_ADDON_API_DIR})
include_directories(${NODE_ADDON_API_DIR})

# Create the shared library for the Node addon
add_library(${PROJECT_NAME} SHARED
    wrappers/engine/player/PlayerCore.cpp
    wrappers/engine/lyricer/LrcParser.cpp
    wrappers/engine/lyricer/LyricQuery.cpp
    wrappers/engine/engine.cpp
    wrappers/engine/EngineWrapper.cpp
    addon.cpp
)

target_include_directories(${PROJECT_NAME} PRIVATE 
    ${CMAKE_CURRENT_SOURCE_DIR} 
    ${CMAKE_CURRENT_SOURCE_DIR}/wrappers/engine
)
target_link_directories(${PROJECT_NAME} PRIVATE ${MPV_LIBRARY_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${MPV_LIBRARIES} ${CMAKE_JS_LIB})

# target_compile_definitions(${PROJECT_NAME} PRIVATE NAPI_DISABLE_CPP_EXCEPTIONS)

set_target_properties(${PROJECT_NAME} PROPERTIES
    PREFIX ""
    SUFFIX ".node"
)

if(APPLE)
    set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-undefined dynamic_lookup")
endif()
